Trivial test merge issue: Valhalla uses Unsafe, needs add exports